# finances

./: .gitignore
cpp/: CMakeLists.txt  debt.csv
cpp/inc/: CsvParser.hpp  Debt.hpp  Worker.hpp  flags.hpp
cpp/src/: CsvParser.cpp  Debt.cpp  Worker.cpp  main.cpp
notebooks/: calcu.ipynb
python/: main.py
python/analyzecpp/: aggSim.py
python/data/: components_data.py
python/models/: component.py  product.py
python/simulations/: simulate.py
python/utils/: helpers.py
